[#6891] add message handling to ViewModelApi

--- a/ui-api-srv-rest/build.gradle
+++ b/ui-api-srv-rest/build.gradle
@@ -28,7 +28,8 @@ smartbit4all {
 			"UIState" : "org.smartbit4all.ui.api.navigation.model.UIState",
 			"ViewModelData" : "org.smartbit4all.ui.api.navigation.model.ViewModelData",
 			"CommandData" : "org.smartbit4all.ui.api.navigation.model.CommandData",
-			"CommandResult" : "org.smartbit4all.ui.api.navigation.model.CommandResult"
+			"CommandResult" : "org.smartbit4all.ui.api.navigation.model.CommandResult",
+			"MessageResult" : "org.smartbit4all.ui.api.navigation.model.MessageResult"
 		]
     }
 }
