--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,14 @@ pool:
 
 steps:
 - checkout: self
-- checkout: git://develop/platform-gradle@develop
+- task: Cache@2
+  inputs:
+    key: 'gradle | "$(Agent.OS)" | **/build.gradle' # Swap build.gradle.kts for build.gradle when using Groovy
+    restoreKeys: |
+      gradle | "$(Agent.OS)"
+      gradle
+    path: $(GRADLE_USER_HOME)
+  displayName: Configure gradle caching
 - task: Gradle@2
   inputs:
     workingDirectory: 'platform'
@@ -31,3 +38,8 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'clean test --info'
+    options: '--build-cache'
+- script: |   
+    # stop the Gradle daemon to ensure no files are left open (impacting the save cache operation later)
+    ./platform/gradlew --stop    
+  displayName: Build
