--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -13,7 +13,9 @@ smartbit4all {
   	importMappings = [
   		"BinaryData": "org.smartbit4all.api.binarydata.BinaryData",
   		"BinaryContent": "org.smartbit4all.api.binarydata.BinaryContent",
-    	"LocalDateTime": "java.time.LocalDateTime"
+    	"LocalDateTime": "java.time.LocalDateTime",
+    	"LocalDate": "java.time.LocalDate",
+    	"LocalTime": "java.time.LocalTime"
   	]
   }
 }
