[#7330] MapBasedObject embedded object list fixes

--- a/api-domain/src/main/resources/descriptors/mapbasedobject-api.yaml
+++ b/api-domain/src/main/resources/descriptors/mapbasedobject-api.yaml
@@ -134,6 +134,11 @@ components:
         - LocalTimeList
         - LocalDateTimeList
         - ObjectList
+    MapBasedObjectSelection:
+      type: object 
+      properties:
+        stringValue:
+          type: string
     StringValue:
       type: object
       required: [name]
