[#7708] fix GitHub build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,4 +37,4 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           cd platform
-          ./gradlew build sonarqube --info
+          ./gradlew clean test sonarqube --info
