[#7718] Hide dialog close button

--- a/ui-api/src/main/resources/descriptors/navigation-api.yaml
+++ b/ui-api/src/main/resources/descriptors/navigation-api.yaml
@@ -292,6 +292,9 @@ components:
         fullSize:
           type: boolean
           default: false
+        hideCloseButton:
+          type: boolean
+          default: false
         title:
           type: string
         icon:
