[7903] invocation-cli-rest test fix

--- a/invocation-cli-rest/build.gradle
+++ b/invocation-cli-rest/build.gradle
@@ -14,6 +14,10 @@ dependencies {
 	
 	testImplementation 'org.mock-server:mockserver-spring-test-listener:5.11.2'
 	testImplementation project(':storage-fs')
+	
+    testImplementation testFixtures(project(':api'))
+    testImplementation testFixtures(project(':core'))
+    testImplementation testFixtures(project(':domain'))
 }
 	
 smartbit4all {
