[7903] InvocationRegisterApi deserialize exception fix

--- a/api-domain/src/main/resources/descriptors/invocation-api.yaml
+++ b/api-domain/src/main/resources/descriptors/invocation-api.yaml
@@ -60,7 +60,7 @@ components:
         uri:
           type: string
           format: uri
-        apis:
+        apiList:
           type: array
           description: The available apis of a tenant.
           items:
