--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,8 @@ include 'ui-common'
 include 'ui-vaadin'
 include 'api'
 include 'api-domain'
+include 'api-cli-rest'
+include 'api-srv-rest'
 include 'sec'
 include 'sec-ms365'
 include 'vaadin-sec'
