--- a/api-srv-rest/build.gradle
+++ b/api-srv-rest/build.gradle
@@ -13,6 +13,9 @@ dependencies {
 	api 'org.springframework:spring-webmvc'
 	api 'javax.servlet:javax.servlet-api:4.0.1'
 	
+	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
