--- a/ui-angular/tsconfig.json
+++ b/ui-angular/tsconfig.json
@@ -27,6 +27,10 @@
         "dist/tree/tree",
         "dist/tree"
       ],
+      "tree-bff": [
+        "dist/tree-bff/tree-bff",
+        "dist/tree-bff"
+      ],
       "viewmodel": [
         "dist/viewmodel/viewmodel",
         "dist/viewmodel"
