--- a/ui-angular/package.json
+++ b/ui-angular/package.json
@@ -8,9 +8,10 @@
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "assemblePackage": "ng build viewmodel && cd dist/viewmodel && npm pack && cd ../.. && ng build tree &&  cd dist/tree && npm pack",
-        "assembleSmartDialog": "ng build smartdialog && cd npms/smartdialog && npm pack",
+        "assembleSmartbitPackages": "ng build smartform && cd npms/smartform && npm pack && cd ../.. && ng build smarttable &&  cd npms/smarttable && npm pack && cd ../.. && ng build smartdialog &&  cd npms/smartdialog && npm pack && cd ../.. && ng build smarttree &&  cd npms/smarttree && npm pack && cd ../.. && ng build smart-expandable-section &&  cd npms/smart-expandable-section && npm pack",
         "assembleSmartForm": "ng build smartform && cd npms/smartform && npm pack",
         "assembleSmartTable": "ng build smarttable && cd npms/smarttable && npm pack",
+        "assembleSmartDialog": "ng build smartdialog && cd npms/smartdialog && npm pack",
         "assembleSmartTree": "ng build smarttree && cd npms/smarttree && npm pack",
         "assembleSmartExpandableSection": "ng build smart-expandable-section && cd npms/smart-expandable-section && npm pack",
         "generate:navigation-api": "openapi-generator-cli generate -i ./navigation-api.yaml -g typescript-angular -o projects/viewmodel/src/lib/core/api/policy",
