--- a/ui-angular/package.json
+++ b/ui-angular/package.json
@@ -8,13 +8,14 @@
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "assemblePackage": "ng build viewmodel && cd dist/viewmodel && npm pack && cd ../.. && ng build tree &&  cd dist/tree && npm pack",
-        "assembleSmartbitPackages": "ng build smartform && cd npms/smartform && npm pack && cd ../.. && ng build smarttable &&  cd npms/smarttable && npm pack && cd ../.. && ng build smartdialog &&  cd npms/smartdialog && npm pack && cd ../.. && ng build smarttree &&  cd npms/smarttree && npm pack && cd ../.. && ng build smart-expandable-section &&  cd npms/smart-expandable-section && npm pack cd ../.. && ng build smart-tab-group &&  cd npms/smart-tab-group && npm pack",
+        "assembleSmartbitPackages": "ng build smartform && cd npms/smartform && npm pack && cd ../.. && ng build smarttable &&  cd npms/smarttable && npm pack && cd ../.. && ng build smartdialog &&  cd npms/smartdialog && npm pack && cd ../.. && ng build smarttree &&  cd npms/smarttree && npm pack && cd ../.. && ng build smart-expandable-section &&  cd npms/smart-expandable-section && npm pack cd ../.. && ng build smart-tab-group &&  cd npms/smart-tab-group && npm pack cd ../.. && ng build smart-navbar &&  cd npms/smart-navbar && npm pack",
         "assembleSmartForm": "ng build smartform && cd npms/smartform && npm pack",
         "assembleSmartTable": "ng build smarttable && cd npms/smarttable && npm pack",
         "assembleSmartDialog": "ng build smartdialog && cd npms/smartdialog && npm pack",
         "assembleSmartTree": "ng build smarttree && cd npms/smarttree && npm pack",
         "assembleSmartExpandableSection": "ng build smart-expandable-section && cd npms/smart-expandable-section && npm pack",
         "assembleSmartTabGroup": "ng build smart-tab-group && cd npms/smart-tab-group && npm pack",
+        "assembleSmartNavbar": "ng build smart-navbar && cd npms/smart-navbar && npm pack",
         "generate:navigation-api": "openapi-generator-cli generate -i ./navigation-api.yaml -g typescript-angular -o projects/viewmodel/src/lib/core/api/policy",
         "generate:tree-api": "openapi-generator-cli generate -i ./tree-api.yaml -g typescript-angular -o projects/tree/src/lib/core/api/tree",
         "generate:tree-bff-api": "openapi-generator-cli generate -i ./tree-api.yaml -g typescript-angular -o projects/tree-bff/src/lib/core/api/tree"
