--- a/ui-angular/angular.json
+++ b/ui-angular/angular.json
@@ -411,6 +411,37 @@
           }
         }
       }
+    },
+    "smart-navbar": {
+      "projectType": "library",
+      "root": "projects/smart-navbar",
+      "sourceRoot": "projects/smart-navbar/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/smart-navbar/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/smart-navbar/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/smart-navbar/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/smart-navbar/src/test.ts",
+            "tsConfig": "projects/smart-navbar/tsconfig.spec.json",
+            "karmaConfig": "projects/smart-navbar/karma.conf.js"
+          }
+        }
+      }
     }
   },
   "defaultProject": "smartbit4all"
