--- a/ui-angular/angular.json
+++ b/ui-angular/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b468aa0b-028e-4697-b67e-20c0d5b26a32"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -439,6 +442,37 @@
             "main": "projects/smart-navbar/src/test.ts",
             "tsConfig": "projects/smart-navbar/tsconfig.spec.json",
             "karmaConfig": "projects/smart-navbar/karma.conf.js"
+          }
+        }
+      }
+    },
+    "smart-toolbar": {
+      "projectType": "library",
+      "root": "projects/smart-toolbar",
+      "sourceRoot": "projects/smart-toolbar/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/smart-toolbar/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/smart-toolbar/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/smart-toolbar/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/smart-toolbar/src/test.ts",
+            "tsConfig": "projects/smart-toolbar/tsconfig.spec.json",
+            "karmaConfig": "projects/smart-toolbar/karma.conf.js"
           }
         }
       }
