--- a/ui-angular/package.json
+++ b/ui-angular/package.json
@@ -8,7 +8,7 @@
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "assemblePackage": "ng build viewmodel && cd dist/viewmodel && npm pack && cd ../.. && ng build tree &&  cd dist/tree && npm pack",
-        "assembleSmartbitPackages": "ng build smartform && cd npms/smartform && npm pack && cd ../.. && ng build smarttable &&  cd npms/smarttable && npm pack && cd ../.. && ng build smartdialog &&  cd npms/smartdialog && npm pack && cd ../.. && ng build smarttree &&  cd npms/smarttree && npm pack && cd ../.. && ng build smart-expandable-section &&  cd npms/smart-expandable-section && npm pack cd ../.. && ng build smart-tab-group &&  cd npms/smart-tab-group && npm pack cd ../.. && ng build smart-navbar &&  cd npms/smart-navbar && npm pack cd ../.. && ng build smart-toolbar && cd npms/smart-toolbar && npm pack",
+        "assembleSmartbitPackages": "ng build smartform && cd npms/smartform && npm pack && cd ../.. && ng build smarttable &&  cd npms/smarttable && npm pack && cd ../.. && ng build smartdialog &&  cd npms/smartdialog && npm pack && cd ../.. && ng build smarttree &&  cd npms/smarttree && npm pack && cd ../.. && ng build smart-expandable-section &&  cd npms/smart-expandable-section && npm pack cd ../.. && ng build smart-tab-group &&  cd npms/smart-tab-group && npm pack cd ../.. && ng build smart-navbar &&  cd npms/smart-navbar && npm pack cd ../.. && ng build smart-toolbar && cd npms/smart-toolbar && npm pack cd ../.. && ng build component-factory-service && cd npms/component-factory-service && npm pack",
         "assembleSmartForm": "ng build smartform && cd npms/smartform && npm pack",
         "assembleSmartTable": "ng build smarttable && cd npms/smarttable && npm pack",
         "assembleSmartDialog": "ng build smartdialog && cd npms/smartdialog && npm pack",
@@ -17,6 +17,7 @@
         "assembleSmartTabGroup": "ng build smart-tab-group && cd npms/smart-tab-group && npm pack",
         "assembleSmartNavbar": "ng build smart-navbar && cd npms/smart-navbar && npm pack",
         "assemleSmartToolbar":"ng build smart-toolbar && cd npms/smart-toolbar && npm pack",
+        "assemleComponentFactoryService":"ng build component-factory-service && cd npms/component-factory-service && npm pack",
         "generate:navigation-api": "openapi-generator-cli generate -i ./navigation-api.yaml -g typescript-angular -o projects/viewmodel/src/lib/core/api/policy",
         "generate:tree-api": "openapi-generator-cli generate -i ./tree-api.yaml -g typescript-angular -o projects/tree/src/lib/core/api/tree",
         "generate:tree-bff-api": "openapi-generator-cli generate -i ./tree-api.yaml -g typescript-angular -o projects/tree-bff/src/lib/core/api/tree"
