--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins  {
-    id 'org.smartbit4all.platform.gradle.java' version '0.3.+' apply false
+    id 'org.smartbit4all.platform.gradle.java' version '0.3.7' apply false
 	id "org.sonarqube" version "3.0"
 }
 
