[#8080] add val4 to FilterField and model

--- a/api-domain/src/main/resources/descriptors/filter-api.yaml
+++ b/api-domain/src/main/resources/descriptors/filter-api.yaml
@@ -159,6 +159,8 @@ components:
           $ref: '#/components/schemas/FilterOperandValue'
         value3:
           $ref: '#/components/schemas/FilterOperandValue'
+        value4:
+          $ref: '#/components/schemas/FilterOperandValue'
         selectedValues:
           type: array
           items:
