--- a/ui-api/src/main/resources/descriptors/filter-api.yaml
+++ b/ui-api/src/main/resources/descriptors/filter-api.yaml
@@ -79,6 +79,8 @@ components:
           type: string
         value3:
           type: string
+        value4:
+          type: string
         enabled:
           type: boolean
           default: true
