--- a/ui-angular/npms/smart-expandable-section/package.json
+++ b/ui-angular/npms/smart-expandable-section/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@smartbit4all/expandable-section",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "peerDependencies": {
     "@angular/common": "^13.2.0",
     "@angular/core": "^13.2.0",
-    "@smartbit4all/form": "file:../../npms/smartform/smartbit4all-form-0.0.2.tgz",
-    "@smartbit4all/table": "file:../../npms/smarttable/smartbit4all-table-0.0.2.tgz"
+    "@smartbit4all/component-factory-service": "file:../../npms/component-factory-service/smartbit4all-component-factory-service-0.0.1.tgz"
   },
   "dependencies": {
     "tslib": "^2.3.0"
