--- a/ui-angular/package.json
+++ b/ui-angular/package.json
@@ -16,8 +16,9 @@
         "assembleSmartExpandableSection": "ng build smart-expandable-section && cd npms/smart-expandable-section && npm pack",
         "assembleSmartTabGroup": "ng build smart-tab-group && cd npms/smart-tab-group && npm pack",
         "assembleSmartNavbar": "ng build smart-navbar && cd npms/smart-navbar && npm pack",
-        "assemleSmartToolbar":"ng build smart-toolbar && cd npms/smart-toolbar && npm pack",
-        "assemleComponentFactoryService":"ng build component-factory-service && cd npms/component-factory-service && npm pack",
+        "assemleSmartToolbar": "ng build smart-toolbar && cd npms/smart-toolbar && npm pack",
+        "assemleSmartNavigation": "ng build smart-navigation && cd npms/smart-navigation && npm pack",
+        "assemleComponentFactoryService": "ng build component-factory-service && cd npms/component-factory-service && npm pack",
         "generate:navigation-api": "openapi-generator-cli generate -i ./navigation-api.yaml -g typescript-angular -o projects/viewmodel/src/lib/core/api/policy",
         "generate:tree-api": "openapi-generator-cli generate -i ./tree-api.yaml -g typescript-angular -o projects/tree/src/lib/core/api/tree",
         "generate:tree-bff-api": "openapi-generator-cli generate -i ./tree-api.yaml -g typescript-angular -o projects/tree-bff/src/lib/core/api/tree"
